RESOLVED FIXED184319
REGRESSION(r222563): removed DoubleReal type check causes tons of crashes because CSE has never known how to handle SaneChain
https://bugs.webkit.org/show_bug.cgi?id=184319
Summary REGRESSION(r222563): removed DoubleReal type check causes tons of crashes bec...
Filip Pizlo
Reported 2018-04-04 15:18:30 PDT
Patch forthcoming.
Attachments
the patch (13.40 KB, patch)
2018-04-04 16:49 PDT, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2018-04-04 16:49:18 PDT
Created attachment 337241 [details] the patch
Filip Pizlo
Comment 2 2018-04-04 16:50:25 PDT
Comment on attachment 337241 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=337241&action=review > JSTests/ChangeLog:4 > + Need a short description (OOPS!). > + Need the bug URL (OOPS!). I fixed this locally
EWS Watchlist
Comment 3 2018-04-04 16:50:38 PDT
Attachment 337241 [details] did not pass style-queue: ERROR: JSTests/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 4 2018-04-04 17:31:04 PDT
Radar WebKit Bug Importer
Comment 5 2018-04-04 17:32:24 PDT
Note You need to log in before you can comment on or make changes to this bug.